learning path complete

--- a/2-OOP/rock_paper_scissors.ipynb
+++ b/2-OOP/rock_paper_scissors.ipynb
@@ -45,17 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Nat selects scissors\n",
+      "Shu selects paper\n",
+      "Round resulted in a win\n",
       "Nat selects rock\n",
-      "Shu selects rock\n",
-      "Round resulted in a draw\n",
-      "Game ended, Nat has 0, and Shu has 0\n",
+      "Shu selects paper\n",
+      "Round resulted in a loss\n",
+      "Game ended, Nat has 1, and Shu has 1\n",
       "It's a Draw\n"
      ]
     }
@@ -66,7 +69,11 @@
     "#     [1, 0, -1],\n",
     "#     [-1, 1, 0]\n",
     "# ]\n",
-    "\n",
+    "# switcher = {\n",
+    "#     \"rock\": 0,\n",
+    "#     \"paper\": 1,\n",
+    "#     \"scissors\": 2\n",
+    "# }\n",
     "# rules[0][1] # Rock vs Paper = -1, Paper wins over Rock\n",
     "\n",
     "class Participant:\n",
@@ -82,7 +89,7 @@
     "        switcher = {\n",
     "            \"rock\": 0,\n",
     "            \"paper\": 1,\n",
-    "            \"scissor\": 2\n",
+    "            \"scissors\": 2\n",
     "        }\n",
     "        return switcher[self.choice]\n",
     "\n",
@@ -109,8 +116,6 @@
     "\n",
     "    def compareChoices(self, p1, p2):\n",
     "        return self.rules[p1.toNumericalChoice()][p2.toNumericalChoice()]\n",
-    "    def awardPoints(self):\n",
-    "        print(\"implement\")\n",
     "\n",
     "    def getResultAsString(self, result):\n",
     "        res = {\n",
@@ -119,8 +124,6 @@
     "            -1: \"loss\"\n",
     "        }\n",
     "        return res[result]\n",
-    "\n",
-    "\n",
     "\n",
     "class Game:\n",
     "    def __init__(self):\n",
@@ -181,7 +184,13 @@
     "#     [-1, 1, -1, 0, 1],\n",
     "#     [1, -1, 1, -1, 0]\n",
     "# ]\n",
-    "\n",
+    "# switcher = {\n",
+    "#     \"rock\": 0,\n",
+    "#     \"paper\": 1,\n",
+    "#     \"scissors\": 2,\n",
+    "#     \"lizard\": 3,\n",
+    "#     \"spock\": 4\n",
+    "# }\n",
     "# rules[0][1] # Rock vs Paper = -1, Paper wins over Rock\n",
     "\n",
     "\n",
@@ -198,10 +207,9 @@
     "        switcher = {\n",
     "            \"rock\": 0,\n",
     "            \"paper\": 1,\n",
-    "            \"scissor\": 2,\n",
+    "            \"scissors\": 2,\n",
     "            \"lizard\": 3,\n",
     "            \"spock\": 4\n",
-    "\n",
     "        }\n",
     "        return switcher[self.choice]\n",
     "\n",
@@ -231,8 +239,6 @@
     "\n",
     "    def compareChoices(self, p1, p2):\n",
     "        return self.rules[p1.toNumericalChoice()][p2.toNumericalChoice()]\n",
-    "    def awardPoints(self):\n",
-    "        print(\"implement\")\n",
     "\n",
     "    def getResultAsString(self, result):\n",
     "        res = {\n",
